--- a/project/styles.css
+++ b/project/styles.css
@@ -113,3 +113,28 @@ header>div {
   .hovernow:hover {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.8);
   }
+
+  table.our-activities {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+table.our-activities th {
+    background-color: #3179AF;
+    color: white;
+    padding: .5rem 2vw;
+    text-align: left;
+}
+
+table.our-activities td {
+    color: #54691f;
+    padding: .4rem 2vw;
+}
+
+table.our-activities tr:nth-child(odd) {
+    background-color: #f7f7f7;
+}
+
+table.our-activities tr:hover {
+    background-color: rgba(84,105,31, .2);
+}
